envoy.yml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc_service
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - exact: "http://localhost:8080"
                        allow_methods: "GET, POST, PUT, DELETE, OPTIONS"
                        allow_headers: "keep-alive,User-Agent,Cache-Control,Content-Type,Authorization,x-grpc-web,x-user-agent"
                        expose_headers: "grpc-status,grpc-message"
                        max_age: "1728000"
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc_backend, timeout: 0s }
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: grpc_backend
      connect_timeout: 0.5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      # Removed TLS transport_socket since backend uses plaintext
      http2_protocol_options: {}  # Required for gRPC
      load_assignment:
        cluster_name: grpc_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "0.tcp.ap.ngrok.io" # GRPC Backend
                      port_value: 17291

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: "0.0.0.0"
      port_value: 9901
